[gd_scene load_steps=2 format=3 uid="uid://bfx3c857glsrp"]

[ext_resource type="Script" path="res://scenes/General/container_multiplayer.gd" id="1_7bn2w"]

[node name="ContainerMultiplayer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7bn2w")

[node name="Hotseat" type="Button" parent="."]
layout_mode = 2
text = "Multiplayer"

[node name="Host" type="Button" parent="."]
layout_mode = 2
text = "Single Player"

[node name="Join" type="Button" parent="."]
layout_mode = 2
text = "Join
"

[node name="TargetIP" type="TextEdit" parent="."]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
placeholder_text = "127.0.0.1"

[connection signal="pressed" from="Hotseat" to="." method="_on_hotseat_pressed"]
[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="text_changed" from="TargetIP" to="." method="_on_target_ip_text_changed"]
